A few layout issues. Added search form that still needs styling.

--- a/wp/wp-content/themes/gradea/css/index.css
+++ b/wp/wp-content/themes/gradea/css/index.css
@@ -31,7 +31,7 @@
 }
 
 .sectiontwo{
-	background: url("../img/quote-left.png") 10% center no-repeat, url("../img/quote-right.png") 90% center no-repeat;
+	background: url("../img/quote-left.png") 10% 30% no-repeat, url("../img/quote-right.png") 90% 30% no-repeat;
 	display:inline-block;
 }
 
@@ -48,10 +48,6 @@
 	font-size:1em;
 
 }
-
-.sectionthree button{
-	padding-top:30px;
-} 
 
 .viewall{
 	margin-top:60px;
